--- a/src/app/fcomponents/AdminDialogs/productDialog/productDialog.component.html
+++ b/src/app/fcomponents/AdminDialogs/productDialog/productDialog.component.html
@@ -43,11 +43,14 @@
     </div>
       
     <!-- !Details of Product -->
-    <div class="col-9">Detail of Products:</div> <div class="col-3"><button (click)="addDetails()">Add new detail</button></div>
-    <div class="col-2">Title:</div><div class="col-2">Price:</div><div class="col-2">Discount:</div>
-    <div class="col-2">TotalStock:</div><div class="col-2">AvailableStock:</div><div class="col-2">Delete</div>        
+    <div class="col-12" *ngIf="status=='update'">
+    <div class="row">
+        <div class="col-9">Detail of Products:</div> <div class="col-3"><button (click)="addDetails()">Add new detail</button></div>
+        <div class="col-2">Title:</div><div class="col-2">Price:</div><div class="col-2">Discount:</div>
+        <div class="col-2">TotalStock:</div><div class="col-2">AvailableStock:</div><div class="col-2">Delete</div>      
+    </div>  
 
-        <form [formGroup]="detailForm" class="col-12">
+        <form [formGroup]="detailForm">
             <div formArrayName="detailItems">
                 <div *ngFor="let detail of detailForm.controls.detailItems.controls, index as i">
                     <div [formGroupName]="i">
@@ -61,13 +64,14 @@
                 </div>
             </div>
         </form>
+    </div>
 
     <!-- description -->
     <div class="col-12">Description:</div>
     <div class="form-group col-12">
         <textarea rows="4" cols="50" class="form-control" name="description" placeholder="description *" [(ngModel)]="productForm.description" #description="ngModel"></textarea>
     </div>
-    <button type="button" class="btn btn-outline-info" (click)="goEditImage()" *ngIf="status == 'update'">Edit product image</button>
+    <div><button type="button" class="btn btn-outline-info" (click)="goEditImage()" *ngIf="status == 'update'">Edit product image</button></div>
 </div>
 </mat-dialog-content>
 
@@ -98,7 +102,7 @@
 </mat-dialog-content>
 
 <mat-dialog-actions>
-    <button class="mat-raised-button"(click)="close()">Close</button>
-    <button class="mat-raised-button mat-primary"(click)="save()" *ngIf="status == 'update'" [disabled] = "isLoading == true">Save</button>
-    <button class="mat-raised-button mat-primary"(click)="create()" *ngIf="status == 'create'" [disabled] = "isLoading == true">Create</button>
+    <button type="button" class="btn btn-outline-secondary" (click)="close()">Close</button>
+    <button type="button" class="btn btn-outline-primary ml-80" (click)="save()" *ngIf="status == 'update'" [disabled] = "isLoading == true">Save</button>
+    <button type="button" class="btn btn-outline-primary ml-80" (click)="create()" *ngIf="status == 'create'" [disabled] = "isLoading == true">Create</button>
 </mat-dialog-actions>
