--- a/src/app/fcomponents/products/productList/productList.component.html
+++ b/src/app/fcomponents/products/productList/productList.component.html
@@ -31,29 +31,20 @@
           <span class="sr-only">Loading...</span>
         </div>
       </div>
-  <!-- display products -->
+  <!-- *display products -->
+
+
   <div class="row py-3" *ngIf="allProducts">
     <div class='col-12 col-sm-6 col-md-6 col-lg-4 pt-4 pb-2' *ngFor="let product of allProducts; index as i">
-
-        <!-- <div id="carouselExampleFade{{i}}" class="carousel slide carousel-fade" data-ride="carousel">
-            <a [routerLink] = "['/product/',product.prodId]">
-            <div class="carousel-inner" >
-              <div class="carousel-item active overflow-hidden h490" *ngFor="let media of product.productMedia, index as i" [ngClass]="{'active': i == 0}">
-                <img src="http://luxedreameventhire.co.nz:5000/{{media.url}}" class="d-block autofix">
-              </div>
+      <div>
+          <a [routerLink] = "['/product/',product.prodId]">
+            <div class="h490" *ngIf="product.productMedia[0]">
+            <img src="http://luxedreameventhire.co.nz:5000/{{product.productMedia[0].url}}" class="d-block autofix">
             </div>
-            </a>
-          </div> -->
+          </a>
+      </div>
 
-          <div>
-              <a [routerLink] = "['/product/',product.prodId]">
-                <div class="h490">
-                <img src="http://luxedreameventhire.co.nz:5000/{{product.productMedia[0].url}}" class="d-block autofix">
-                </div>
-              </a>
-          </div>
-
-          <h1><a [routerLink] = "['/product/',product.prodId]" class="m1">{{product.title}}</a></h1>
+      <h1><a [routerLink] = "['/product/',product.prodId]" class="m1">{{product.title}}</a></h1>
       <div class="row">
         <div class="col-4" *ngIf="product.discount && product.discount>0"><span class="s2gold mr-3">${{product.price - product.discount}}</span><s>${{product.price}}</s></div>
         <div class="s2gold col-4" *ngIf="!product.discount || product.discount == 0">${{product.price}}</div>
@@ -61,5 +52,19 @@
       </div>
     </div>
   </div>
+
+  pagination:
+  <!-- !pagination -->
+  <!-- <div class="row" *ngIf="isProductsGrouped && groupedProducts"> -->
+    <nav aria-label="Page navigation example">
+      <ul class="pagination">
+        <!-- <li class="page-item"><a class="page-link" href="#">Previous</a></li> -->
+        <li class="page-item" *ngFor="let prodGroup of groupedProducts, index as i" (click)="changePage(i)"><a class="page-link">{{i+1}}</a></li>
+        <!-- <li class="page-item"><a class="page-link" href="#">Next</a></li> -->
+      </ul>
+    </nav>
+  <!-- </div> -->
+  
+
 </div>
 </div>
