--- a/src/app/fcomponents/AdminDialogs/productDialog/productDialog.component.html
+++ b/src/app/fcomponents/AdminDialogs/productDialog/productDialog.component.html
@@ -20,7 +20,7 @@
         <input class="form-control" min="0" type="number" name="availableStock" placeholder="availableStock *" [(ngModel)]="productForm.availableStock" #availableStock="ngModel">
     </div>
      <!-- Price && Discount -->
-     <div class="col-6">Price:</div> <div class="col-6">Discount:</div>
+     <div class="col-6">General Price:</div> <div class="col-6">Discount:</div>
         <div class="form-group col-6">
             <input class="form-control"  min="0" type="number" name="price" placeholder="Price" [(ngModel)]="productForm.price" #price="ngModel">
         </div>            
@@ -41,14 +41,15 @@
             <option *ngFor="let cate of allCategories, index as i" value= {{cate.categoryId}}>{{cate.categoryName}}</option>
         </select>
     </div>
-      
+
+    <br>
     <!-- !Details of Product -->
-    <div class="col-12" *ngIf="status=='update'">
+    <div style="margin-top:14px;" class="col-12" *ngIf="status=='update'">
     <div class="row">
-        <div class="col-9">Detail of Products:</div> <div class="col-3"><button (click)="addDetails()">Add new detail</button></div>
+        <div class="col-9">Products specification:</div> <div class="col-3"><button (click)="addDetails()">Add new detail</button></div>
         <div class="col-2">Title:</div><div class="col-2">Price:</div><div class="col-2">Discount:</div>
-        <div class="col-2">TotalStock:</div><div class="col-2">AvailableStock:</div><div class="col-2">Delete</div>      
-    </div>  
+        <div class="col-2">TotalStock:</div><div class="col-2">AvailableStock:</div><div class="col-2">Delete</div>
+    </div>
 
         <form [formGroup]="detailForm">
             <div formArrayName="detailItems">
@@ -67,7 +68,7 @@
     </div>
 
     <!-- description -->
-    <div class="col-12">Description:</div>
+    <div style="margin-top:14px;" class="col-12">Description:</div>
     <div class="form-group col-12">
         <textarea rows="4" cols="50" class="form-control" name="description" placeholder="description *" [(ngModel)]="productForm.description" #description="ngModel"></textarea>
     </div>
