--- a/src/app/fcomponents/admin/admin.component.html
+++ b/src/app/fcomponents/admin/admin.component.html
@@ -50,7 +50,7 @@
       </div>
     </nav>
 
-    <main role="main" class="col-md-9 ml-sm-auto col-lg-10 px-4">
+    <main role="main" class="col-md-10 ml-sm-auto col-lg-10 px-2">
       <!-- !Dashboard -->
       <div *ngIf="blockCode == '1'" style="text-align:center;padding-top:13%;">
       <h1>Welcome to Dashboard</h1>
@@ -80,17 +80,16 @@
         <table class="table">
           <thead>
             <tr class="table-secondary">
-              <th scope="col">#<span style="font-size:10px;">编号</span></th>
-              <th scope="col">Title<span style="font-size:10px;">标题</span></th>
-              <th scope="col" >Subtitle<span style="font-size:10px;">副标题</span></th>
-              <th scope="col" >Price<span style="font-size:10px;">价格</span></th>
-              <th scope="col" >Discount<span style="font-size:10px;">折扣</span></th>
-              <th scope="col" *ngIf="blockCode == 2" >Category<span
-                  style="font-size:10px;">类别</span></th>
-              <th scope="col" >Inventory<span style="font-size:10px;">库存</span></th>
-              <th scope="col" >Description<span style="font-size:10px;">描述</span></th>
-              <th scope="col" >Edit<span style="font-size:10px;">编辑</span></th>
-              <th scope="col" >Delete<span style="font-size:10px;">删除</span></th>
+              <th scope="col">#<br><span>编号</span></th>
+              <th scope="col">Title<br><span>标题</span></th>
+              <th scope="col">Subtitle<br><span>副标题</span></th>
+              <th scope="col" >Price<br><span>价格</span></th>
+              <th scope="col" >Discount<br><span>折扣</span></th>
+              <th scope="col" *ngIf="blockCode == 2" >Category<br><span>类别</span></th>
+              <th scope="col" >Inventory<br><span>库存</span></th>
+              <th scope="col" >Description<br><span>描述</span></th>
+              <th scope="col" >Edit<br><span>编辑</span></th>
+              <th scope="col" >Delete<br><span>删除</span></th>
             </tr>
           </thead>
           <tbody *ngIf="displayData">
@@ -129,12 +128,12 @@
         <table class="table">
           <thead>
             <tr class="table-secondary">
-              <th scope="col">Id</th>
-              <th scope="col">Customer<span style="font-size:10px;">顾客</span></th>
-              <th scope="col">Event Type</th>
-              <th scope="col">Description<span style="font-size:10px;">描述</span></th>
-              <th scope="col">Edit<span style="font-size:10px;">编辑</span></th>
-              <th scope="col">Delete<span style="font-size:10px;">删除</span></th>
+              <th scope="col">Id<br>编号</th>
+              <th scope="col">Customer<br><span>顾客</span></th>
+              <th scope="col">Event Type<br><span> 活动类别</span></th>
+              <th scope="col">Description<br><span>描述</span></th>
+              <th scope="col">Edit<br><span>编辑</span></th>
+              <th scope="col">Delete<br><span>删除</span></th>
             </tr>
           </thead>
           <tbody *ngIf="displayData">
@@ -167,11 +166,11 @@
         <table class="table">
           <thead>
             <tr class="table-secondary">
-              <th scope="col">Id</th>
-              <th scope="col">Question<span style="font-size:10px;">问题</span></th>
-              <th scope="col">Answer<span style="font-size:10px;">回答</span></th>
-              <th scope="col">Edit<span style="font-size:10px;">编辑</span></th>
-              <th scope="col">Delete<span style="font-size:10px;">删除</span></th>
+              <th scope="col">Id<br><span>编号</span></th>
+              <th scope="col">Question<br><span>问题</span></th>
+              <th scope="col">Answer<br><span>回答</span></th>
+              <th scope="col">Edit<br><span>编辑</span></th>
+              <th scope="col">Delete<br><span>删除</span></th>
             </tr>
           </thead>
           <tbody *ngIf="displayData">
@@ -188,21 +187,21 @@
 
       <!-- !Cart -->
       <div *ngIf="blockCode == '7'">
-        <div class="mt-3 pt-3">
+        <div class="mt-3">
           <h2>Carts</h2>
         </div>
         <table class="table">
           <thead>
             <tr class="table-secondary">
-              <th scope="col">Id</th>
-              <th scope="col">Detail</th>
-              <th scope="col">Contact</th>
-              <th scope="col">Price</th>
-              <th scope="col">Location</th>
-              <th scope="col">CreateTime</th>
-              <th scope="col">EventDate</th>
-              <th scope="col">UpdateTime</th>
-              <th scope="col">Delete</th>
+              <th scope="col">Id<br><span>编号</span></th>
+              <th scope="col">Detail<br><span>详情</span></th>
+              <th scope="col">Contact<br><span>顾客信息</span></th>
+              <th scope="col">Price<br><span>价格</span></th>
+              <th scope="col">Location<br><span>活动地点</span></th>
+              <th scope="col">CreateTime<br><span>创建时间</span></th>
+              <th scope="col">EventDate<br><span>活动日期</span></th>
+              <th scope="col">UpdateTime<br><span>修改时间</span></th>
+              <th scope="col">Delete<br><span>删除</span></th>
             </tr>
           </thead>
           <tbody *ngIf="displayData">
