--- a/src/app/fcomponents/AdminDialogs/galleryDialog/galleryDialog.component.html
+++ b/src/app/fcomponents/AdminDialogs/galleryDialog/galleryDialog.component.html
@@ -3,7 +3,7 @@
 <mat-dialog-content>
     <!-- Customer -->
     <div class="form-group">
-        <input class="form-control" name="CustomerName" placeholder="CustomerName *" [(ngModel)]="galleryForm.CustomerName" #CustomerName="ngModel">
+        <input class="form-control" name="CustomerName" placeholder="Customer name *" [(ngModel)]="galleryForm.CustomerName" #CustomerName="ngModel">
      </div>
      <!-- Event Name -->
       <!-- type of event -->
