--- a/src/app/fcomponents/admin/admin.component.html
+++ b/src/app/fcomponents/admin/admin.component.html
@@ -50,7 +50,7 @@
       </div>
     </nav>
 
-    <main role="main" class="col-md-10 ml-sm-auto col-lg-10 px-2">
+    <main role="main" class="col-md-10 ml-sm-auto col-lg-10">
       <!-- !Dashboard -->
       <div *ngIf="blockCode == '1'" style="text-align:center;padding-top:13%;">
       <h1>Welcome to Dashboard</h1>
@@ -59,28 +59,26 @@
       <!-- !Hire || Service || Package-->
       <div *ngIf="blockCode == '2' || blockCode == '3' || blockCode == '4'">
         <div class="row mt-3">
-          <div>
-            <div class="d-inline" *ngIf="blockCode == 2">
-              <h2>Hires</h2>
-            </div>
-            <div class="d-inline" *ngIf="blockCode == 3">
-              <h2>Services</h2>
-            </div>
-            <div class="d-inline" *ngIf="blockCode == 4">
-              <h2>Packages</h2>
-            </div>
+          <div class="col-1" *ngIf="blockCode == 2">
+            <h2>Hires</h2>
           </div>
-          <div class="pt-2">
+          <div class="col-2" *ngIf="blockCode == 3">
+            <h2>Services</h2>
+          </div>
+          <div class="col-2" *ngIf="blockCode == 4">
+            <h2>Packages</h2>
+          </div>
+          <div class="pt-2 col">
             <button type="button" class="ml-2" style="border-radius: 5px;" title="Add" (click)="createProduct()">
               <i class="fas fa-plus"></i>
-              <span>Add</span>
+              Add
             </button>
           </div>
         </div>
         <table class="table">
           <thead>
             <tr class="table-secondary">
-              <th scope="col">#<br><span>编号</span></th>
+              <th scope="col">Id<br><span>编号</span></th>
               <th scope="col">Title<br><span>标题</span></th>
               <th scope="col">Subtitle<br><span>副标题</span></th>
               <th scope="col" >Price<br><span>价格</span></th>
@@ -115,10 +113,10 @@
       <!-- !Gallery -->
       <div *ngIf="blockCode == '5'">
         <div class="row mt-3">
-          <div>
+          <div class="col-1">
             <h2>Gallery</h2>
           </div>
-          <div class="pt-2">
+          <div class="pt-2 col">
               <button type="button" class="ml-2" style="border-radius: 5px;" title="Add" (click)="createGallery()">
                 <i class="fas fa-plus"></i>
                 <span>Add</span>
@@ -128,7 +126,7 @@
         <table class="table">
           <thead>
             <tr class="table-secondary">
-              <th scope="col">Id<br>编号</th>
+              <th scope="col">Id<br><span>编号</span></th>
               <th scope="col">Customer<br><span>顾客</span></th>
               <th scope="col">Event Type<br><span> 活动类别</span></th>
               <th scope="col">Description<br><span>描述</span></th>
@@ -152,10 +150,10 @@
       <!-- !Faq -->
       <div *ngIf="blockCode == '6'">
         <div class="row mt-3">
-          <div>
+          <div class="col-1">
             <h2>Faq</h2>
           </div>
-          <div class="pt-2">
+          <div class="pt-2 col">
               <button type="button" class="ml-2" style="border-radius: 5px;" title="Add" (click)="createFaq()">
                 <i class="fas fa-plus"></i>
                 <span>Add</span>
