--- a/src/app/fcomponents/pages/homepage/homepage.component.css
+++ b/src/app/fcomponents/pages/homepage/homepage.component.css
@@ -5,10 +5,10 @@ a{
     height: auto;
     max-width: 100%;
 }
-i{
+/* i{
     color:#b2823f;
     font-size:70px;
-}
+} */
 ul li{
     margin-top:15px
 }
@@ -54,19 +54,6 @@ ul li{
         height:370px;
     }
 }
-
-.carousel-control-next-icon
-{
-  content: '>';
-  font-size: 55px;
-  color: red;
-}
-
-.carousel-control-prev-icon {
-  content: '<';
-  font-size: 55px;
-  color: red;
-}
 .h490{
     position: relative;
     padding-top: 100%;
@@ -96,4 +83,8 @@ ul li{
     width: 100%;
     height: 100%;
 }
-
+.carousel-control-prev i, .carousel-control-next i{
+    color:#b2823f;
+    font-size:70px;
+    opacity: 0.5;
+}
