--- a/src/app/fcomponents/admin/admin.component.html
+++ b/src/app/fcomponents/admin/admin.component.html
@@ -84,7 +84,8 @@
               <th scope="col" >Price<br><span>价格</span></th>
               <th scope="col" >Discount<br><span>折扣</span></th>
               <th scope="col" *ngIf="blockCode == 2" >Category<br><span>类别</span></th>
-              <th scope="col" >Inventory<br><span>库存</span></th>
+              <th scope="col" >Total stock<br><span>总库存</span></th>
+              <th scope="col" >Available stock<br><span>现库存</span></th>
               <th scope="col" >Description<br><span>描述</span></th>
               <th scope="col" >Edit<br><span>编辑</span></th>
               <th scope="col" >Delete<br><span>删除</span></th>
@@ -101,6 +102,7 @@
                 <div *ngIf="data.category">{{data.category.categoryName}}</div>
               </td>
               <td >{{data.totalStock}}</td>
+              <td>{{data.availableStock}}</td>
               <td style="text-align:center; font-size:10px;">{{data.description}}</td>
               <td ><i class="far fa-edit" (click)="openProduct(data)" title="Edit"></i></td>
               <td ><i class="far fa-trash-alt" title="Delete"
