--- a/src/app/fcomponents/admin/admin.component.html
+++ b/src/app/fcomponents/admin/admin.component.html
@@ -50,7 +50,17 @@
       </div>
     </nav>
 
+
     <main role="main" class="col-md-10 ml-sm-auto col-lg-10">
+      <!-- loading -->
+      <div class="text-center mt-5 pt-5" *ngIf="isLoading">
+          Loading Data...Please wait
+          <div class="spinner-border text-info ml-2" role="status">
+            <span class="sr-only">Loading...</span>
+          </div>
+      </div>
+
+      <div *ngIf="!isLoading">
       <!-- !Dashboard -->
       <div *ngIf="blockCode == '1'" style="text-align:center;padding-top:13%;">
       <h1>Welcome to Dashboard</h1>
@@ -255,6 +265,7 @@
           </tbody>
         </table>
       </div>
+    </div>
     </main>
   </div>
 </div>
