--- a/src/app/fcomponents/products/product/product.component.html
+++ b/src/app/fcomponents/products/product/product.component.html
@@ -1,4 +1,11 @@
 <div class="container">
+  <!-- loading -->
+  <div class="text-center mt-5 pt-5" *ngIf="isLoading">
+      Loading Product...Please wait
+      <div class="spinner-border text-info ml-2" role="status">
+        <span class="sr-only">Loading...</span>
+      </div>
+  </div>
     <!-- !product path -->
   <div class="row mt-5">
     <div class="col-12" *ngIf="productDetail">
@@ -65,14 +72,16 @@
 
     <div class="row mt-3">
       <div class="col-6 col-lg-6 s1" *ngIf="!this.productDetail['productDetail'] || this.productDetail['productDetail'].length==0">
-        Quantity: <input type="number" [value] = "quantity"  min="1" max={{productDetail.availableStock}} [(ngModel)]="quantity">
+        Quantity: <input type="number" [value] = "quantity"  min="0" max={{productDetail.availableStock}} [(ngModel)]="quantity">
         <!-- <span class="s3 pl-2"> (only {{productDetail.availableStock}} in stock)</span> -->
       </div>
-      <div class="col-6 col-lg-6"><button class='btn btn_gold' (click)="manageCartProds()" [disabled] = " 0>= quantity ||cartForm.invalid">Add to cart</button></div>
+      <div class="col-6 col-lg-6">
+        <button class='btn btn_gold' (click)="manageCartProds()" [disabled] = " 0>= quantity && (cartForm.invalid || isInputZero)">Add to cart</button>
+      </div>
     </div>
 
     <div class="row justify-content-end">
-      <div class="col-6 col-lg-4 alert alert-danger mt-3" role="alert" *ngIf="!isStockAvailable" >No more stock</div>
+      <!-- <div class="col-6 col-lg-4 alert alert-danger mt-3" role="alert" *ngIf="!isStockAvailable" >No more stock</div> -->
       <div class="col-6 col-lg-4 alert alert-success mt-3" role="alert" *ngIf="isprodAdded && isStockAvailable">
           Added into cart.
       </div>
