--- a/src/app/fcomponents/admin/admin.component.html
+++ b/src/app/fcomponents/admin/admin.component.html
@@ -61,9 +61,38 @@
       </div>
 
       <div *ngIf="!isLoading">
+
       <!-- !Dashboard -->
       <div *ngIf="blockCode == '1'" style="text-align:center;padding-top:13%;">
       <h1>Welcome to Dashboard</h1>
+      <!-- Edit productCategory -->
+      <div class="row mt-5">
+        <div class="col-6">
+            <form [formGroup]="categoryForm">
+                <div formArrayName="categoryItems">
+                    <div *ngFor="let cate of categoryForm.controls.categoryItems.controls, index as i">
+                        <div [formGroupName]="i">
+                        <input class="col-6" type="text" formControlName="categoryName" placeholder="Category name">
+                        <i class="fas fa-trash-alt col-1 text-center" (click)="deleteCate(cate,i)"></i>
+                        </div>
+                    </div>
+                </div>
+            </form>
+            <!-- category is loading... -->
+            <div *ngIf="isLoadingCategory">
+              Loading categories...
+                <div class="spinner-border text-info" role="status">
+                    <span class="sr-only">Loading...</span>
+                </div>    
+            </div>
+
+            <div class="mt-4">            
+              <button type="button" class="btn btn-outline-secondary btn-sm" (click)="addCategory()" [disabled] = "isLoadingCategory == true">Add new category</button>
+              <button class="btn btn-outline-secondary btn-sm ml-5" (click)="updateCategory()" [disabled] = "isLoadingCategory == true">Save changes</button>
+            </div>
+           <div>{{feedbackMessage}}</div>
+        </div>
+      </div>
       </div>
 
       <!-- !Hire || Service || Package-->
