--- a/src/app/fcomponents/products/product/product.component.html
+++ b/src/app/fcomponents/products/product/product.component.html
@@ -44,7 +44,8 @@
   <div *ngIf="productDetail" class="col-12 col-md-6 col-lg-5 pl-lg-5">
     <h1 class="l2">{{productDetail.title}}<br/></h1>
     <div class="my-4" *ngIf="productDetail.discount && productDetail.discount>0">
-      <span class="s1gold mr-3">${{productDetail.price - productDetail.discount}}</span><s><span class="s1">${{productDetail.price}}</span></s>
+      <span class="s1 mr-3">${{productDetail.price - productDetail.discount}}</span>
+      <!-- <s><span class="s1">${{productDetail.price}}</span></s> -->
     </div>
     <div class="my-4" *ngIf="!productDetail.discount || productDetail.discount == 0">
         <span class="s1">${{productDetail.price}}</span>
